[tool.poetry]
name = "modelw-preset-django"
version = "2026.7.0"
packages = [
    {  include = "model_w/preset/django", from = "src" }
]

description = "Model W preset for Django"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
]

readme = "README.md"

repository = "https://github.com/ModelW/preset-django"
homepage = "https://github.com/ModelW/preset-django"

keywords = ["django", "env", "configuration"]

[tool.poetry.dependencies]
python = '~3.14'
setuptools = "*"
boto3 = {version = "~1.43", optional = true}
celery = {extras = ["redis", "tblib"], version = "~5.6", optional = true}
channels = {version = "~4.3", optional = true}
channels-redis = {version = "~4.3", optional = true}
coloredlogs = "~15.0"
django = {version = "~6.0", extras = ["argon2"]}
django-celery-results = {version = "~2.6", optional = true}
django-health-check = {version="~3.24.0", optional = true}
django-ninja = {version="~1.6.0", optional = true}
django-postgres-extra = "~2.0"
django-storages = {version = "~1.14", optional = true}
django-wailer = "~1.0.0-beta.2"
djangorestframework = "~3.17"
djangorestframework-gis = "~1.2"
dj-database-url = "~3.1"
email-validator = {version="^2.0", optional = true}
granian = "~2.7.0"
modelw-env-manager = "~1.0"
procrastinate = {extras = ["django"], version = "~3.9", optional = true}
psutil = "^7.2.0"
psycopg2 = {version = "~2.9", optional = true}  # Optional psycopg2
psycopg = {version = "~3.3", optional = true}  # Optional psycopg3
redis = "~6.4"
rich = "~14.3"
sentry-sdk = "~2.64"
wagtail = {version = "~7.4", optional = true}
wand = {version = "~0.7", optional = true}
whitenoise = "~6.12"
django-ipware = "~7.0.1"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
ruff = "^0.15.0"

[tool.poetry.extras]
celery = ["celery", "django-celery-results"]
channels = ["channels", "channels-redis"]
wagtail = ["wagtail", "wand", "django-storages", "boto3"]
storages = ["django-storages", "boto3"]
health = ["django-health-check"]
ninja = ["django-ninja", "email-validator"]
procrastinate = ["procrastinate"]
psycopg2 = ["psycopg2"]
psycopg = ["psycopg"] # psycopg3

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
